[gd_scene load_steps=19 format=3 uid="uid://dmgbp1r2tqxr1"]

[ext_resource type="Texture2D" uid="uid://bcyk1hlqe3ogu" path="res://assets/objects/screw_driver_sprite_sheet.png" id="1_6uid2"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="1_isigy"]
[ext_resource type="Script" path="res://game/objects/screw_driver.gd" id="1_uvfkr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bqd0f"]
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bk3c5"]
radius = 26.0
height = 86.0

[sub_resource type="Animation" id="Animation_pl2yr"]
resource_name = "move_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v0yvx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_jykfk"]
resource_name = "move_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m1edb"]
resource_name = "move_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-15, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_thi43"]
resource_name = "move_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e38gi"]
_data = {
"RESET": SubResource("Animation_v0yvx"),
"move_down": SubResource("Animation_thi43"),
"move_left": SubResource("Animation_pl2yr"),
"move_right": SubResource("Animation_jykfk"),
"move_up": SubResource("Animation_m1edb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mlol8"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ag2cl"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b33al"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qnbb4"]
animation = &"move_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_spumm"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_mlol8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ag2cl")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_b33al")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_qnbb4")
blend_point_3/pos = Vector2(0, -1.1)
triangles = PackedInt32Array(0, 1, 2, 0, 1, 3)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wr1vw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mvkww"]
states/Direction/node = SubResource("AnimationNodeBlendSpace2D_spumm")
states/Direction/position = Vector2(411, 100)
transitions = ["Start", "Direction", SubResource("AnimationNodeStateMachineTransition_wr1vw")]

[node name="ScrewDriver" type="Area2D"]
script = ExtResource("1_uvfkr")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("1_6uid2")
offset = Vector2(0, 1)
hframes = 4
frame = 3

[node name="SpriteIdle" type="Sprite2D" parent="."]
clip_children = 2
z_index = 1
scale = Vector2(2, 2)
texture = ExtResource("1_6uid2")
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_bqd0f")

[node name="AreaChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaChecker"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bk3c5")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -49.0
offset_top = -52.0
offset_right = 49.0
offset_bottom = -29.0
theme = ExtResource("1_isigy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 10
offset_left = -69.0
offset_top = -40.0
offset_right = 69.0
offset_bottom = -16.9999
theme = ExtResource("1_isigy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e38gi")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mvkww")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Direction/blend_position = Vector2(0.0255591, 0.619651)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
